Automatically genereate a simple project.
