# prj-simple/swagger_server/swagger/swagger.yaml
@@ -44,30 +44,60 @@ paths:
       - "application/problem+json"
       parameters: []
       responses:
-        '200':
+        200:
           description: "Il server ha ritornato il timestamp.\n"
           schema:
-            $ref: "#/definitions/Timestamp"
-        '429':
+            $ref: "#/definitions/Timestampa"
+          headers:
+            Retry-After:
+              type: "integer"
+              format: "int32"
+              description: "Retry contacting the endpoint *at least* after seconds.\n\
+                See https://tools.ietf.org/html/rfc7231#section-7.1.3"
+            X-RateLimit-Limit:
+              type: "integer"
+              format: "int32"
+              description: "The number of allowed requests in the current period"
+            X-RateLimit-Remaining:
+              type: "integer"
+              format: "int32"
+              description: "The number of remaining requests in the current period"
+            X-RateLimit-Reset:
+              type: "integer"
+              format: "int32"
+              description: "The number of seconds left in the current period"
+        429:
           description: "Too many requests"
           schema:
             $ref: "#/definitions/Problem"
           headers:
             Retry-After:
-              $ref: "#/x-components/headers/Retry-After"
+              type: "integer"
+              format: "int32"
+              description: "Retry contacting the endpoint *at least* after seconds.\n\
+                See https://tools.ietf.org/html/rfc7231#section-7.1.3"
             X-RateLimit-Limit:
-              $ref: "#/x-components/headers/X-RateLimit-Limit"
+              type: "integer"
+              format: "int32"
+              description: "The number of allowed requests in the current period"
             X-RateLimit-Remaining:
-              $ref: "#/x-components/headers/X-RateLimit-Remaining"
+              type: "integer"
+              format: "int32"
+              description: "The number of remaining requests in the current period"
             X-RateLimit-Reset:
-              $ref: "#/x-components/headers/X-RateLimit-Reset"
-        '503':
+              type: "integer"
+              format: "int32"
+              description: "The number of seconds left in the current period"
+        503:
           description: "Service Unavailable"
           schema:
             $ref: "#/definitions/Problem"
           headers:
             Retry-After:
-              $ref: "#/x-components/headers/Retry-After"
+              type: "integer"
+              format: "int32"
+              description: "Retry contacting the endpoint *at least* after seconds.\n\
+                See https://tools.ietf.org/html/rfc7231#section-7.1.3"
         default:
           description: "Unexpected error"
           schema:
@@ -109,7 +139,7 @@ definitions:
           it SHOULD provide human-readable documentation for the problem type\n(e.g.,\
           \ using HTML).\n"
         default: "about:blank"
-  Timestamp:
+  Timestampa:
     type: "object"
     properties:
       timestamp:
@@ -129,20 +159,32 @@ x-components:
       description: "Too many requests"
       headers:
         Retry-After:
-          $ref: "#/x-components/headers/Retry-After"
+          description: "Retry contacting the endpoint *at least* after seconds.\n\
+            See https://tools.ietf.org/html/rfc7231#section-7.1.3"
+          format: "int32"
+          type: "integer"
         X-RateLimit-Limit:
-          $ref: "#/x-components/headers/X-RateLimit-Limit"
+          description: "The number of allowed requests in the current period"
+          format: "int32"
+          type: "integer"
         X-RateLimit-Remaining:
-          $ref: "#/x-components/headers/X-RateLimit-Remaining"
+          description: "The number of remaining requests in the current period"
+          format: "int32"
+          type: "integer"
         X-RateLimit-Reset:
-          $ref: "#/x-components/headers/X-RateLimit-Reset"
+          description: "The number of seconds left in the current period"
+          format: "int32"
+          type: "integer"
       schema:
         $ref: "#/definitions/Problem"
     503ServiceUnavailable:
       description: "Service Unavailable"
       headers:
         Retry-After:
-          $ref: "#/x-components/headers/Retry-After"
+          description: "Retry contacting the endpoint *at least* after seconds.\n\
+            See https://tools.ietf.org/html/rfc7231#section-7.1.3"
+          format: "int32"
+          type: "integer"
       schema:
         $ref: "#/definitions/Problem"
     default:
@@ -152,21 +194,17 @@ x-components:
   headers:
     Retry-After:
       description: "Retry contacting the endpoint *at least* after seconds.\nSee https://tools.ietf.org/html/rfc7231#section-7.1.3"
-      schema:
-        format: "int32"
-        type: "integer"
+      format: "int32"
+      type: "integer"
     X-RateLimit-Limit:
       description: "The number of allowed requests in the current period"
-      schema:
-        format: "int32"
-        type: "integer"
+      format: "int32"
+      type: "integer"
     X-RateLimit-Remaining:
       description: "The number of remaining requests in the current period"
-      schema:
-        format: "int32"
-        type: "integer"
+      format: "int32"
+      type: "integer"
     X-RateLimit-Reset:
       description: "The number of seconds left in the current period"
-      schema:
-        format: "int32"
-        type: "integer"
+      format: "int32"
+      type: "integer"
